@@ -15,9 +15,8 @@ static char THIS_FILE[]=__FILE__;
 // Construction/Destruction
 //////////////////////////////////////////////////////////////////////
 
-CConfigData::CConfigData()
-{
-
+CConfigData::CConfigData() {
+	enableTimers = true;
 }
 
 CConfigData::~CConfigData()
