@@ -26,7 +26,7 @@ HeaderFile=CharInfoDialog.h
 ImplementationFile=CharInfoDialog.cpp
 BaseClass=MyDialog
 Filter=D
-LastObject=IDC_SPELL_STATS
+LastObject=IDC_MAGIC_SHIELD_TIMER_TEXT
 VirtualFilter=dWC
 
 [DLG:IDD_CHARINFO]
@@ -112,7 +112,7 @@ Control75=IDC_CHARINFO_LVL_SPEED,static,1342308352
 [DLG:IDD_CHARINFO (Polish)]
 Type=1
 Class=CCharInfoDialog
-ControlCount=75
+ControlCount=76
 Control1=IDC_CHARACTER_STATS,button,1342177287
 Control2=IDC_SPELL_STATS,button,1342177287
 Control3=IDC_STATIC,static,1342181384
@@ -167,13 +167,13 @@ Control51=IDC_TIME,static,1342308865
 Control52=IDC_STATIC,static,1342308352
 Control53=IDC_CHARINFO_LVL,static,1342308352
 Control54=IDC_CHARINFO_EXP_UPIN,static,1342308352
-Control55=IDC_STATIC,static,1342308352
+Control55=IDC_INVIS_TIMER_TEXT,static,1342308352
 Control56=IDC_CHARINFO_INVIS_REMAINING,static,1342308352
-Control57=IDC_STATIC,static,1342308352
+Control57=IDC_HASTE_TIMER_TEXT,static,1342308352
 Control58=IDC_CHARINFO_HASTE_REMAINING,static,1342308352
-Control59=IDC_STATIC,static,1342308352
+Control59=IDC_STRONG_HASTE_TIMER_TEXT,static,1342308352
 Control60=IDC_CHARINFO_STRONGHASTE_REMAINING,static,1342308352
-Control61=IDC_STATIC,static,1342308352
+Control61=IDC_MAGIC_SHIELD_TIMER_TEXT,static,1342308352
 Control62=IDC_CHARINFO_MAGICSHIELD_REMAINING,static,1342308352
 Control63=IDC_STATIC,static,1342308352
 Control64=IDC_CHARINFO_SP,static,1342308352
@@ -188,6 +188,7 @@ Control72=IDC_CHARINFO_MLVL,static,1342308352
 Control73=IDC_CHARINFO_MLVL_SPEED,static,1342308352
 Control74=IDC_CHARINFO_MLVL_UPIN,static,1342308352
 Control75=IDC_CHARINFO_LVL_SPEED,static,1342308352
+Control76=IDC_ENABLETIMERS,button,1342242819
 
 [CLS:CGroupBoxEx]
 Type=0
